SBVTestSuite/TestSuite/CompileTests/SCase/SCase06.stderr
SCase06.hs:12:14: error: [GHC-39584]
    " sCase: Unknown symbolic ADT: FExpr

        To use a symbolic case expression, declare your ADT, and then:
             mkSymbolic ''FExpr
        In a template-haskell context.

    " In the quasi-quotation: [sCase|FExpr e of Num _ -> 1|]
   |
12 | t e = [sCase|FExpr e of Num _ -> 1|]
   |              ^^^^^^^^^^^^^^^^^^^^^^^

